[project]
name = "cxview-core"
version = "0.1.0"
description = "Shared core library for microservices"
authors = [
  { name = "Allen Vo", email = "lenvo@cxview.ai" }
]
readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["cxview_core*"]

dependencies = [
  "pydantic>=2.0",
  "uuid6>=2025.0.1",
  "pytz>=2024.2",
  "python-jose>=3.3.0",
  "pydantic>=2.9.2",
  
]

[project.optional-dependencies]
mongo = [
  "motor>=3.6.0",
  "pymongo>=4.9.2",
]

postgres = [
  "SQLAlchemy>=2.0.44",
  "asyncpg>=0.29.0",
]
